fix: close sidebar on mobile after route update (#54)

--- a/ui/src/assets/style/main.css
+++ b/ui/src/assets/style/main.css
@@ -31,7 +31,3 @@ label:has(input[type="radio"]) {
 [data-sonner-toast] [data-description] {
   @apply text-foreground!;
 }
-
-.ellipsis {
-  @apply inline-block overflow-hidden text-ellipsis whitespace-nowrap;
-}
